<resources>
    <string name="app_name">Савостьянов Андрей</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="hint_mobile_phone">Мобильный телефон</string>
    <string name="hint_vk_profile">Профиль в VK</string>
    <string name="hint_vk_com">vk.com/makeev_mikhail</string>
    <string name="hint_git_repo">github.com/YuliaRada/School</string>
    <string name="hint_repo">Репозиторий</string>
    <string name="hint_myself">О себе</string>
    <string name="myself">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
        eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
        mollit anim id est laborum.</string>
    <string name="capture_ratio">Рейтинг</string>
    <string name="caption_write_code">Написано строк кода</string>
    <string name="caption_projects">Проектов</string>
    <string name="pick_image">Выберите изображение</string>
    <string name="pick_photo_src">Выберите источник изображения</string>
    <string name="pick_image_from_gallery">Выберите фото</string>
    <string name="error_email_value_message">Ошибка в поле электронной почты</string>
    <string name="hint_pass">Пароль</string>
    <string name="enter_capture">ВОЙТИ</string>
    <string name="forgot_pass_capture">Забыли пароль?</string>
    <string name="title_send_sms_per_app">Send email per...</string>
    <string name="error_no_email_client">NO email client installed</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="enter_success">Вход выполнен!</string>
    <string name="login_pass_is_wrong">Неверный логин или пароль!</string>
    <string name="error_other_login">Неизвестная ошибка!</string>

    <!-- Font family -->
    <string name="ff_regular">sans-serif</string>
    <string name="ff_medium">sans-serif-medium</string>
    <string name="capture_view_more">Просмотр</string>
    <string name="search_user">Поиск пользователя</string>
    <string name="type_user_name">Введите имя пользователя</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
