<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/bottomSheetLayout"
              android:layout_width="match_parent"
              android:layout_height="172dp"
              android:background="@drawable/nav_header_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingTop="@dimen/phone_screen_left_and_right_margin_16"
              app:behavior_hideable="true"
              app:behavior_peekHeight="0dp"
              app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/bottomSheetHeading"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/text_subheading_size_16"
        android:text="@string/pick_photo_src"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:id="@+id/ll_add_photo_from_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/text_body1_size_14"
                android:text="@string/camera"
                android:textColor="@color/white"
                />

            <ImageView
                android:layout_width="@dimen/avatar_size_40"
                android:layout_height="@dimen/avatar_size_40"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                android:scaleType="fitCenter"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_add_photo_from_gallery"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/text_body1_size_14"
                android:text="@string/gallery"
                android:textColor="@color/white"
                />

            <ImageView
                android:layout_width="@dimen/avatar_size_40"
                android:layout_height="@dimen/avatar_size_40"
                android:src="@drawable/ic_collections_black_24dp"
                android:scaleType="fitCenter"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>