<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size"
                    android:fitsSystemWindows="true">

                    <ImageView
                        android:id="@+id/user_profile_placeholder_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/profile_image_size"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user_photo"/>

                    <LinearLayout
                        android:id="@+id/photo_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@color/opacity25"

                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:textSize="@dimen/text_body1_size_14"
                            android:textColor="@color/white"
                            android:text="@string/pick_image"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="center"
                            android:src="@drawable/ic_linked_camera_black_24dp"/>

                    </LinearLayout>

                </FrameLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/toolbar_style"
                    app:layout_collapseMode="pin"/>


            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/ratio_placeholder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ratio_placeholder_height"
            android:background="@color/grey"
            android:elevation="5dp"
            android:orientation="horizontal"
            app:layout_behavior="com.softdesign.devintensive.ui.customview.SubheaderBehavior">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/tv_ratio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_title_size_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/capture_ratio"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_caption_size_12"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/tablet_screen_left_and_right_margin_24"
                android:layout_marginTop="@dimen/tablet_screen_left_and_right_margin_24"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/tv_code_rows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_title_size_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/caption_write_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_caption_size_12"/>


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/tablet_screen_left_and_right_margin_24"
                android:layout_marginTop="@dimen/tablet_screen_left_and_right_margin_24"
                android:background="@color/grey_light"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/tv_projects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_title_size_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/caption_projects"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_caption_size_12"/>

            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/user_profile_content"/>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fab_right_space"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right">

        </android.support.design.widget.FloatingActionButton>

        <include layout="@layout/bottom_sheet_pick_user_photo"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/drawer_menu"/>


</android.support.v4.widget.DrawerLayout>